ola-parser/src/testdata/syntaxTests/nameAndTypeResolution/265_new_for_non_array.sol
contract C {
    fn f(uint size) public {
        uint x = new uint(7);
    }
}
// ----
// TypeError 8807: (65-73): Contract or array type expected.
